syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.study.grpc.finalservice";
package com.study.grpc.finalservice;

// The greeting service definition.
service FinalService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}